handled error message mapping with Swagger UI & edited the mq service to be able to publish queues to existing queue chanel (Can not create queue if there's no exists).
